Fixed z-index issue on Bootstrap 3.2

--- a/less/bootstrap-lightbox.less
+++ b/less/bootstrap-lightbox.less
@@ -15,7 +15,7 @@ body.lightbox-open,
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 1040;
+	z-index: 1050;
 	display: none;
 	overflow: auto;
 	overflow-y: scroll;
